--- a/alpine-node/Dockerfile
+++ b/alpine-node/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Akiyoshi Sakaguchi <a-sakaguchi@groovenauts.jp>
 
 ENV NODE_VERSION 5.2.0
 
-RUN apk add --update --virtual build-dependencies build-base linux-headers curl paxctl python \
+RUN apk add --update --virtual build-dependencies build-base binutils-gold linux-headers curl paxctl python \
   && curl -SLO "https://nodejs.org/dist/v${NODE_VERSION}/node-v${NODE_VERSION}.tar.gz" \
   && tar -xzf "node-v${NODE_VERSION}.tar.gz" \
   && cd "/node-v${NODE_VERSION}" \
