--- a/alpine-node/Dockerfile
+++ b/alpine-node/Dockerfile
@@ -1,7 +1,8 @@
 FROM alpine:3.3
 MAINTAINER Akiyoshi Sakaguchi <a-sakaguchi@groovenauts.jp>
 
-ENV NODE_VERSION 5.5.0
+ENV NODE_VERSION=6.2.0 \
+    NPM_CONFIG_LOGLEVEL=info
 
 RUN apk add --update --virtual build-dependencies build-base binutils-gold linux-headers curl paxctl python \
   && curl -SLO "https://nodejs.org/dist/v${NODE_VERSION}/node-v${NODE_VERSION}.tar.gz" \
