Change email in MAINTAINER

--- a/alpine-ngx_mruby/Dockerfile
+++ b/alpine-ngx_mruby/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:3.4
-MAINTAINER Akiyoshi Sakaguchi <a-sakaguchi@groovenauts.jp>
+MAINTAINER Akiyoshi Sakaguchi <autumngoodluck@gmail.com>
 
 ENV NGINX_CONFIG_OPT_ENV --with-http_stub_status_module \
                          --with-http_ssl_module \
